index.html testing

--- a/public/index.html
+++ b/public/index.html
@@ -6,7 +6,7 @@
     </head>
     <body>
         <main id="root">
-            <p>Hi</p>
+            <p>Hi what's up</p>
         </main>
     </body>
 </html>
