--- a/index.html
+++ b/index.html
@@ -1,12 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
-        <meta charset="utf-8">
-        <title>Ignite Robotics</title>
+        <meta http-equiv="refresh" content="0; url=https://IgniteRoboticsWebDev.github.io/public/index.html">
     </head>
-    <body>
-        <main id="root">
-            <p>Hi</p>
-        </main>
-    </body>
 </html>
