--- a/public/index.html
+++ b/public/index.html
@@ -1,12 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
-    <head>
-        <meta charset="utf-8">
-        <title>Ignite Robotics</title>
-    </head>
-    <body>
-        <main id="root">
-            <p>Hi what's up</p>
-        </main>
-    </body>
+
+<head>
+    <meta charset="utf-8">
+    <link rel="stylesheet" href="./styles.css">
+    <link rel="icon" href="./img/ignite_flame.png">
+    <title>Ignite Robotics</title>
+</head>
+
+<body>
+    <main id="root"></main>
+</body>
+
 </html>
