--- a/public/index.html
+++ b/public/index.html
@@ -10,7 +10,7 @@
 
 <body>
     <main id="root"></main>
-    <script src="/bundle.js"></script>
+    <script src="/public/bundle.js"></script>
 </body>
 
 </html>
