--- a/public/index.html
+++ b/public/index.html
@@ -11,7 +11,7 @@
 <body>
     <main id="root"></main>
     <p>PLEASE</p>
-    <script src="/public/bundle.js"></script>
+    <script src="./bundle.js"></script>
 </body>
 
 </html>
