--- a/index.html
+++ b/index.html
@@ -3,4 +3,8 @@
     <head>
         <meta http-equiv="refresh" content="0; url=https://IgniteRoboticsWebDev.github.io/public/index.html">
     </head>
+    <body>
+        <p>Ignite Robotics</p>
+    </body>
+
 </html>
