--- a/public/index.html
+++ b/public/index.html
@@ -1,17 +1,18 @@
 <!DOCTYPE html>
 <html lang="en">
-
-<head>
-    <meta charset="utf-8">
-    <link rel="stylesheet" href="./styles.css">
-    <link rel="icon" href="./img/ignite_flame.png">
-    <title>Ignite Robotics</title>
-</head>
-
-<body>
-    <main id="root"></main>
-    <p>PLEASE</p>
-    <script src="./bundle.js"></script>
-</body>
-
+    <head>
+        <meta charset="UTF-8">
+        <meta name="author" content="IgniteRobotics">
+        <meta name="viewport" content="width=device-width, initial-scale=1">
+        <meta http-equiv="refresh" content="0; url=https://IgniteRoboticsWebDev.github.io/public/index.html">
+        <link rel="icon" href="./img/ignite_flame.png">
+        <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet">
+        <link rel="stylesheet" href="/src/style.css">
+        <title>Ignite Robotics</title>
+    </head>
+    <body>
+        <nav>
+            <p>Hi</p>
+        </nav>
+    </body>
 </html>
