--- a/public/index.html
+++ b/public/index.html
@@ -6,12 +6,24 @@
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="icon" href="./img/ignite_flame.png">
         <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet">
-        <link rel="stylesheet" href="/src/style.css">
+        <link rel="stylesheet" href="./style.css">
         <title>Ignite Robotics</title>
     </head>
     <body>
         <nav>
-            <p>Hi</p>
+            <img src="./img/ignite_logo.png" alt="Ignite Robotics Logo" class="nav-logo">
+            <ul class="nav-links">
+                <li><a href="#">Programs</a></li>
+                <li><a href="#">Summer Classes</a></li>
+                <li><a href="#">Scholarship</a></li>
+                <li><a href="#">Support</a></li>
+                <li><a href="#">About Us</a></li>
+                <li><a href="#">Contact</a></li>
+                <li><a href="#">Login</a></li>
+            </ul>
         </nav>
+        <main>
+            <img src="./img/landingpage_photo.png" alt="Exothermic competing" class="landing-photo">
+        </main>
     </body>
 </html>
