Made minor changes to box shadows to align with the design

--- a/public/support-us.html
+++ b/public/support-us.html
@@ -33,7 +33,7 @@
                 </p>
             </div>
 
-            <img class="northwest-photo" src="./img/support_us_photo.png">
+            <img class="northwest-photo" src="./img/northwest_photo.png">
 
             <div class="how-to-get-involved">
                 <h1 class="involved-text">How to get involved</h1>
