--- a/public/index.html
+++ b/public/index.html
@@ -25,5 +25,31 @@
         <main>
             <img src="./img/landingpage_photo.png" alt="Exothermic competing" class="landing-photo">
         </main>
+        <head>
+            <meta charset="UTF-8">
+            <meta name="viewport" content="width=device-width, initial-scale=1.0">
+            <title>Why Ignite Robotics?</title>
+            <link rel="stylesheet" href="styles.css">
+        </head>
+        <div class="ignite-container">
+            <h1 class="ignite-title">Why Ignite Robotics?</h1>
+            <div class="ignite-content">
+                <div class="ignite-section">
+                    <h2 class="ignite-section-title">Hands-On Engineering Experience</h2>
+                    <p class="ignite-section-text">You’ll develop technical skills in mechanical and electronic engineering, programming, and CAD design. The program also focuses on the engineering design process, documentation, and essential soft skills like teamwork, communication, and problem-solving, setting you up for future academic and career success.</p>
+                </div>
+                <div class="ignite-section">
+                    <h2 class="ignite-section-title">Tailored Programs for All Skill Levels</h2>
+                    <p class="ignite-section-text">Whether you’re just starting out in middle school with the Blaze Qubits program or you’re a seasoned high school participant in the Exothermic division, we provide the perfect balance of mentorship, independence, and challenge. You’ll have the opportunity to grow at your own pace, making your experience in robotics both rewarding and fulfilling.</p>
+                </div>
+                <div class="ignite-section">
+                    <h2 class="ignite-section-title">Collaborative and Competitive Environment</h2>
+                    <p class="ignite-section-text">You’ll experience a unique blend of competition and collaboration. You’ll have the chance to showcase your skills and apply what you’ve learned in regional, national, and even international robotics competitions.</p>
+                </div>
+            </div>
+        </div>
+        </html>
+        
     </body>
+
 </html>
