created footer, changed background color

--- a/public/index.html
+++ b/public/index.html
@@ -15,7 +15,6 @@
             <ul class="nav-links">
                 <li><a href="#">Programs</a></li>
                 <li><a href="#">Summer Classes</a></li>
-                <li><a href="#">Scholarship</a></li>
                 <li><a href="#">Support</a></li>
                 <li><a href="#">About Us</a></li>
                 <li><a href="#">Contact</a></li>
@@ -25,5 +24,36 @@
         <main>
             <img src="./img/landingpage_photo.png" alt="Exothermic competing" class="landing-photo">
         </main>
+        <footer>
+            <img src="./img/ignite_logo.png" alt="Ignite Robotics Logo" class="footer-logo">
+            <div class="footer-info">
+                <div>
+                    <h2>Our Address</h2>
+                    <p class="footer-address">1910 132nd Ave NE #7, Bellevue, WA 98005</p>
+                </div>
+                <div>
+                    <h2>Social Media</h2>
+                    <div class="footer-section">
+                        <p><a href="https://www.instagram.com/igniterobotics_/" class="footer-link">Instagram</a></p>
+                        <p><a href="https://www.linkedin.com/company/ignite-robotics" class="footer-link">LinkedIn</a></p>
+                        <p><a href="https://www.youtube.com/@igniterobotics" class="footer-link">Youtube</a></p>
+                    </div>
+                </div>
+                <div>
+                    <h2>Pages</h2>
+                    <div class="footer-section">
+                        <p><a href="#">Home</a></p>
+                        <p><a href="#">Exothermic</a></p>
+                        <p><a href="#">Quantum</a></p>
+                        <p><a href="#">Blaze Qubits</a></p>
+                        <p><a href="#">Summer Courses</a></p>
+                        <p><a href="#">Support Us</a></p>
+                        <p><a href="#">About Us</a></p>
+                        <p><a href="#">Contact</a></p>
+                        <p><a href="#">Login</a></p>
+                    </div>
+                </div>
+            </div>
+        </footer>
     </body>
 </html>
