styling changes made to summer.html

--- a/public/summer.html
+++ b/public/summer.html
@@ -14,19 +14,16 @@
   </head>
   <body>
     <nav>
-      <img
-        src="./img/ignite_logo.png"
-        alt="Ignite Robotics Logo"
-        class="nav-logo"
-      />
+      <a href="./index.html">
+          <img src="./img/ignite_logo.png" alt="Ignite Robotics Logo" class="nav-logo">
+      </a>
       <ul class="nav-links">
-        <li><a href="#">Programs</a></li>
-        <li><a href="#">Summer Classes</a></li>
-        <li><a href="#">Scholarship</a></li>
-        <li><a href="#">Support</a></li>
-        <li><a href="#">About Us</a></li>
-        <li><a href="#">Contact</a></li>
-        <li><a href="#">Login</a></li>
+          <li><a href="#">Programs</a></li>
+          <li><a href="./summer.html">Summer Classes</a></li>
+          <li><a href="#">Support</a></li>
+          <li><a href="#">About Us</a></li>
+          <li><a href="#">Contact</a></li>
+          <li><a href="#">Login</a></li>
       </ul>
     </nav>
     <main>
@@ -35,17 +32,22 @@
         alt="Photo of competition"
         class="banner"
       /> -->
-      <div class="banner"></div>
-      <div id="header-text-div">
-        <h1 class="header-text">Summer courses</h1>
-        <p class="header-text" id="page-desc">
-          Prepare. Compete. Excel. Ignite Your Robotics Journey This Summer!
-        </p>
+      <div class="banner">
+        <img src="./img/summer_header.png" alt="Summer Courses photo" class="banner">
       </div>
+      <div id="center-header-div">
+        <div id="header-text-div">
+          <h1 class="header-text">Summer courses</h1>
+          <p class="header-text" id="page-desc">
+            Prepare. Compete. Excel. Ignite Your Robotics Journey This Summer!
+          </p>
+        </div>
+      </div>
+
       <div class="centered-section">
         <div id="introduction">
-          <h2 id="intro-header">Introducing Ignite Summer 2024 Classes</h2>
-          <p id="intro-desc">
+          <h2>Introducing Ignite Summer 2024 Classes</h2>
+          <p>
             Whether you're a new student eager to learn the basics or a
             returning student looking to advance your skills, our summer classes
             are designed to prepare you for the upcoming season. Sharpen your
@@ -57,7 +59,7 @@
           </p>
         </div>
         <div id="courses">
-          <h2 id="courses-header">Courses Offered</h2>
+          <h2>Courses Offered</h2>
           <div id="course-gallery">
             <div class="course">
               <img class="course-img" src="./img/code_collaboration.png" />
@@ -79,9 +81,7 @@
             <div class="course">
               <img class="course-img" src="./img/code_collaboration.png" />
               <div class="course-info">
-                <h3 class="course-name">
-                  From IQ to VRC: Mastering the Transition
-                </h3>
+                <h3 class="course-name">From IQ to VRC: Mastering the Transition</h3>
                 <p class="course-desc">Cost: $800</p>
                 <p class="course-desc">Duration: 20 hours</p>
                 <p class="course-desc">
