--- a/public/index.html
+++ b/public/index.html
@@ -11,10 +11,12 @@
     </head>
     <body>
         <nav>
-            <img src="./img/ignite_logo.png" alt="Ignite Robotics Logo" class="nav-logo">
+            <a href="./index.html">
+                <img src="./img/ignite_logo.png" alt="Ignite Robotics Logo" class="nav-logo">
+            </a>
             <ul class="nav-links">
                 <li><a href="#">Programs</a></li>
-                <li><a href="#">Summer Classes</a></li>
+                <li><a href="./summer.html">Summer Classes</a></li>
                 <li><a href="#">Support</a></li>
                 <li><a href="#">About Us</a></li>
                 <li><a href="#">Contact</a></li>
@@ -22,17 +24,17 @@
             </ul>
         </nav>
         <main>
-            <img src="./img/landingpage_photo.png" alt="Exothermic competing" class="landing-photo">
+            <img src="./img/landingpage_photo.png" alt="Exothermic competing" class="banner">
         </main>
         <footer>
             <img src="./img/ignite_logo.png" alt="Ignite Robotics Logo" class="footer-logo">
             <div class="footer-info">
                 <div>
-                    <h2>Our Address</h2>
+                    <h3>Our Address</h3>
                     <p class="footer-address">1910 132nd Ave NE #7, Bellevue, WA 98005</p>
                 </div>
                 <div>
-                    <h2>Social Media</h2>
+                    <h3>Social Media</h3>
                     <div class="footer-section">
                         <p><a href="https://www.instagram.com/igniterobotics_/" class="footer-link">Instagram</a></p>
                         <p><a href="https://www.linkedin.com/company/ignite-robotics" class="footer-link">LinkedIn</a></p>
@@ -40,7 +42,7 @@
                     </div>
                 </div>
                 <div>
-                    <h2>Pages</h2>
+                    <h3>Pages</h3>
                     <div class="footer-section">
                         <p><a href="#">Home</a></p>
                         <p><a href="#">Exothermic</a></p>
