fixed banner text alignment

--- a/public/summer.html
+++ b/public/summer.html
@@ -38,7 +38,7 @@
       <div id="center-header-div">
         <div id="header-text-div">
           <h1 class="header-text">Summer courses</h1>
-          <p class="header-text" id="page-desc">
+          <p class="page-desc" id="page-desc">
             Prepare. Compete. Excel. Ignite Your Robotics Journey This Summer!
           </p>
         </div>
