fixed footer css

--- a/public/index.html
+++ b/public/index.html
@@ -27,7 +27,10 @@
             <img src="./img/landingpage_photo.png" alt="Exothermic competing" class="banner">
         </main>
         <footer>
-            <img src="./img/ignite_logo.png" alt="Ignite Robotics Logo" class="footer-logo">
+            <div class="footer-description">
+                <img src="./img/ignite_logo.png" alt="Ignite Robotics Logo" class="footer-logo">
+                <p>A 501(c)(3) nonprofit.</p>
+            </div>
             <div class="footer-info">
                 <div>
                     <h3>Our Address</h3>
@@ -42,7 +45,6 @@
                     </div>
                 </div>
                 <div>
-                    <h3>Pages</h3>
                     <div class="footer-section">
                         <p><a href="#">Home</a></p>
                         <p><a href="#">Exothermic</a></p>
@@ -53,7 +55,6 @@
                         <p><a href="#">About Us</a></p>
                         <p><a href="#">Contact</a></p>
                         <p><a href="#">Login</a></p>
-                    </div>
                 </div>
             </div>
         </footer>
