--- a/public/summer.html
+++ b/public/summer.html
@@ -75,7 +75,7 @@
                 <p class="course-desc">
                   Objective: Learn about Github, VSCode, and C++
                 </p>
-                <button class="course-enroll">Enroll</button>
+                <button class="course-enroll"><p>Enroll</p></button>
               </div>
             </div>
             <div class="course">
@@ -89,7 +89,7 @@
                   to VRC
                 </p>
 
-                <button class="course-enroll">Enroll</button>
+                <button class="course-enroll"><p>Enroll</p></button>
               </div>
             </div>
             <div class="course">
@@ -102,7 +102,7 @@
                   Objective: Learn computer- aided design software (Autodesk
                   Fusion 360)
                 </p>
-                <button class="course-enroll">Enroll</button>
+                <button class="course-enroll"><p>Enroll</p></button>
               </div>
             </div>
           </div>
