about page partly done

--- a/public/summer.html
+++ b/public/summer.html
@@ -21,22 +21,17 @@
           <li><a href="#">Programs</a></li>
           <li><a href="./summer.html">Summer Classes</a></li>
           <li><a href="#">Support</a></li>
-          <li><a href="#">About Us</a></li>
+          <li><a href="./about.html">About Us</a></li>
           <li><a href="#">Contact</a></li>
           <li><a href="#">Login</a></li>
       </ul>
     </nav>
     <main>
-      <!-- <img
-        src="./img/summer_header.png"
-        alt="Photo of competition"
-        class="banner"
-      /> -->
       <div class="banner">
         <img src="./img/summer_header.png" alt="Summer Courses photo" class="banner">
       </div>
       <div id="center-header-div">
-        <div id="header-text-div">
+        <div id="header-text-div-1">
           <h1 class="header-text">Summer courses</h1>
           <p class="page-desc" id="page-desc">
             Prepare. Compete. Excel. Ignite Your Robotics Journey This Summer!
@@ -108,38 +103,38 @@
           </div>
         </div>
       </div>
-      <footer>
-        <div class="footer-description">
-            <img src="./img/ignite_logo.png" alt="Ignite Robotics Logo" class="footer-logo">
-            <p>A 501(c)(3) nonprofit.</p>
-        </div>
-        <div class="footer-info">
-            <div>
-                <h3>Our Address</h3>
-                <p class="footer-address">1910 132nd Ave NE #7, Bellevue, WA 98005</p>
-            </div>
-            <div>
-                <h3>Social Media</h3>
-                <div class="footer-section">
-                    <p><a href="https://www.instagram.com/igniterobotics_/" class="footer-link">Instagram</a></p>
-                    <p><a href="https://www.linkedin.com/company/ignite-robotics" class="footer-link">LinkedIn</a></p>
-                    <p><a href="https://www.youtube.com/@igniterobotics" class="footer-link">Youtube</a></p>
-                </div>
-            </div>
-            <div>
-                <div class="footer-section">
-                    <p><a href="#">Home</a></p>
-                    <p><a href="#">Exothermic</a></p>
-                    <p><a href="#">Quantum</a></p>
-                    <p><a href="#">Blaze Qubits</a></p>
-                    <p><a href="#">Summer Courses</a></p>
-                    <p><a href="#">Support Us</a></p>
-                    <p><a href="#">About Us</a></p>
-                    <p><a href="#">Contact</a></p>
-                    <p><a href="#">Login</a></p>
-            </div>
-        </div>
-    </footer>
     </main>
+    <footer>
+      <div class="footer-description">
+          <img src="./img/ignite_logo.png" alt="Ignite Robotics Logo" class="footer-logo">
+          <p>A 501(c)(3) nonprofit.</p>
+      </div>
+      <div class="footer-info">
+          <div>
+              <h3>Our Address</h3>
+              <p class="footer-address">1910 132nd Ave NE #7, Bellevue, WA 98005</p>
+          </div>
+          <div>
+              <h3>Social Media</h3>
+              <div class="footer-section">
+                  <p><a href="https://www.instagram.com/igniterobotics_/" class="footer-link">Instagram</a></p>
+                  <p><a href="https://www.linkedin.com/company/ignite-robotics" class="footer-link">LinkedIn</a></p>
+                  <p><a href="https://www.youtube.com/@igniterobotics" class="footer-link">Youtube</a></p>
+              </div>
+          </div>
+          <div>
+              <div class="footer-section">
+                  <p><a href="#">Home</a></p>
+                  <p><a href="#">Exothermic</a></p>
+                  <p><a href="#">Quantum</a></p>
+                  <p><a href="#">Blaze Qubits</a></p>
+                  <p><a href="#">Summer Courses</a></p>
+                  <p><a href="#">Support Us</a></p>
+                  <p><a href="#">About Us</a></p>
+                  <p><a href="#">Contact</a></p>
+                  <p><a href="#">Login</a></p>
+          </div>
+      </div>
+  </footer>
   </body>
 </html>
