--- a/public/index.html
+++ b/public/index.html
@@ -18,7 +18,7 @@
                 <li><a href="#">Programs</a></li>
                 <li><a href="./summer.html">Summer Classes</a></li>
                 <li><a href="#">Support</a></li>
-                <li><a href="#">About Us</a></li>
+                <li><a href="./about.html">About Us</a></li>
                 <li><a href="#">Contact</a></li>
                 <li><a href="#">Login</a></li>
             </ul>
