--- a/public/about.html
+++ b/public/about.html
@@ -19,7 +19,7 @@
                 <li><a href="./summer.html">Summer Classes</a></li>
                 <li><a href="#">Support</a></li>
                 <li><a href="./about.html">About Us</a></li>
-                <li><a href="#">Contact</a></li>
+                <li><a href="./contact.html">Contact</a></li>
                 <li><a href="#">Login</a></li>
             </ul>
         </nav>
@@ -83,6 +83,46 @@
                         <div class="value-div">
                             <h3>Leadership</h3>
                             <p>100% Student-Oriented and Lead</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="outer-goals-div">
+                    <h2>Our Goals</h2>
+                    <div class="inner-goals-div">
+                        <div class="goal">
+                            <img src="./img/inclusivity.jpeg" alt="inclusivity photo">
+                            <div class="goal-description-right">
+                                <h3>Inclusivity</h3>
+                                <p>We aim to lower Ignite's operating costs. By doing so, we hope to make lgnite and Robotics more accessible.</p>
+                            </div>
+                        </div>
+                        <div class="goal">
+                            <div class="goal-description-left">
+                                <h3>Scholarship Offers</h3>
+                                <p>We already provide a few scholarships for members. However, Ignite wants to provide as many future innovators as possible the opportunity to compete and participate in robotics.</p>
+                            </div>
+                            <img src="./img/scholarship.jpeg" alt="scholarship photo">
+                        </div>
+                        <div class="goal">
+                            <img src="./img/expansion_photo.jpeg" alt="expansion photo">
+                            <div class="goal-description-right">
+                                <h3>Further Expansion</h3>
+                                <p>Recently, we've relocated into a 6,000+ sqft space in Bellevue, WA to support our growing student population. We hope to expand our reach into more communities in the greater Seattle area.</p>
+                            </div>
+                        </div>
+                        <div class="goal">
+                            <div class="goal-description-left">
+                                <h3>Outreach</h3>
+                                <p>We aspire to create opportunities for underrepresented groups to explore STEM fields. Events such as GirlPowered and outreach campaigns, supported by you, bring STEM exploration to the source!</p>
+                            </div>
+                            <img src="./img/outreach1.JPG" alt="GirlPowered photo">
+                        </div>
+                        <div class="goal">
+                            <img src="./img/emergingyouth.JPG" alt="Youth robotics photo">
+                            <div class="goal-description-right">
+                                <h3>An Emerging Youth Robotics Culture</h3>
+                                <p>With your support, Ignite can continue to provide the latest, cutting-edge tools, materials, and mentorship for our students to push the boundaries of youth engineering at a scale like no other.</p>
+                            </div>
                         </div>
                     </div>
                 </div>
