--- a/public/summer.html
+++ b/public/summer.html
@@ -22,7 +22,7 @@
           <li><a href="./summer.html">Summer Classes</a></li>
           <li><a href="#">Support</a></li>
           <li><a href="./about.html">About Us</a></li>
-          <li><a href="#">Contact</a></li>
+          <li><a href="./contact.html">Contact</a></li>
           <li><a href="#">Login</a></li>
       </ul>
     </nav>
