media quiery for content, footer, nav, and about

--- a/public/index.html
+++ b/public/index.html
@@ -11,17 +11,40 @@
     </head>
     <body>
         <nav>
-            <a href="./index.html">
-                <img src="./img/ignite_logo.png" alt="Ignite Robotics Logo" class="nav-logo">
-            </a>
-            <ul class="nav-links">
-                <li><a href="#">Programs</a></li>
-                <li><a href="./summer.html">Summer Classes</a></li>
-                <li><a href="#">Support</a></li>
-                <li><a href="./about.html">About Us</a></li>
-                <li><a href="./contact.html">Contact</a></li>
-                <li><a href="#">Login</a></li>
-            </ul>
+            <div>
+                <a href="./index.html">
+                    <img src="./img/ignite_logo.png" alt="Ignite Robotics Logo" class="nav-logo">
+                </a>
+                <ul class="nav-links">
+                    <li><a href="#">Exothermic</a></li>
+                    <li><a href="#">Quantum</a></li>
+                    <li><a href="#">Blaze</a></li>
+                    <li><a href="./summer.html">Summer Classes</a></li>
+                    <li><a href="#">Support</a></li>
+                    <li><a href="./about.html">About Us</a></li>
+                    <li><a href="./contact.html">Contact</a></li>
+                    <li><a href="#" class="login-button">Login</a></li>
+                </ul>
+                <!-- Hamburger Menu -->
+                <div class="hamburger-menu">
+                    <a>
+                        <img src="./img/hamburger-menu.svg" alt="hamburger menu">
+                    </a>
+                </div>
+            </div>
+            <!-- Popup menu -->
+            <div class="popup-menu" id="popup-menu">
+                <ul class="popup-nav-links">
+                    <li><a href="#">Exothermic</a></li>
+                    <li><a href="#">Quantum</a></li>
+                    <li><a href="#">Blaze</a></li>
+                    <li><a href="./summer.html">Summer Classes</a></li>
+                    <li><a href="#">Support</a></li>
+                    <li><a href="./about.html">About Us</a></li>
+                    <li><a href="./contact.html">Contact</a></li>
+                    <li><a href="#" class="login-button">Login</a></li>
+                </ul>
+            </div>
         </nav>
         <main>
             <img src="./img/landingpage_photo.png" alt="Exothermic competing" class="banner">
