--- a/public/about.html
+++ b/public/about.html
@@ -11,17 +11,40 @@
     </head>
     <body>
         <nav>
-            <a href="./index.html">
-                <img src="./img/ignite_logo.png" alt="Ignite Robotics Logo" class="nav-logo">
-            </a>
-            <ul class="nav-links">
-                <li><a href="#">Programs</a></li>
-                <li><a href="./summer.html">Summer Classes</a></li>
-                <li><a href="#">Support</a></li>
-                <li><a href="./about.html">About Us</a></li>
-                <li><a href="./contact.html">Contact</a></li>
-                <li><a href="#">Login</a></li>
-            </ul>
+            <div>
+                <a href="./index.html">
+                    <img src="./img/ignite_logo.png" alt="Ignite Robotics Logo" class="nav-logo">
+                </a>
+                <ul class="nav-links">
+                    <li><a href="#">Exothermic</a></li>
+                    <li><a href="#">Quantum</a></li>
+                    <li><a href="#">Blaze</a></li>
+                    <li><a href="./summer.html">Summer Classes</a></li>
+                    <li><a href="#">Support</a></li>
+                    <li><a href="./about.html">About Us</a></li>
+                    <li><a href="./contact.html">Contact</a></li>
+                    <li><a href="#" class="login-button">Login</a></li>
+                </ul>
+                <!-- Hamburger Menu -->
+                <div class="hamburger-menu">
+                    <a>
+                        <img src="./img/hamburger-menu.svg" alt="hamburger menu">
+                    </a>
+                </div>
+            </div>
+            <!-- Popup menu -->
+            <div class="popup-menu" id="popup-menu">
+                <ul class="popup-nav-links">
+                    <li><a href="#">Exothermic</a></li>
+                    <li><a href="#">Quantum</a></li>
+                    <li><a href="#">Blaze</a></li>
+                    <li><a href="./summer.html">Summer Classes</a></li>
+                    <li><a href="#">Support</a></li>
+                    <li><a href="./about.html">About Us</a></li>
+                    <li><a href="./contact.html">Contact</a></li>
+                    <li><a href="#" class="login-button">Login</a></li>
+                </ul>
+            </div>
         </nav>
         <main>
             <div class="banner">
@@ -65,7 +88,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="outer-values-div">
+                <div class="primary-section">
                     <h2>Our Core Values</h2>
                     <div class="inner-values-div">
                         <div class="value-div">
@@ -129,36 +152,37 @@
             </div>
         </main>
         <footer>
-            <div class="footer-description">
+            <div class="footer-content">
                 <img src="./img/ignite_logo.png" alt="Ignite Robotics Logo" class="footer-logo">
-                <p>A 501(c)(3) nonprofit.</p>
-            </div>
-            <div class="footer-info">
-                <div>
-                    <h3>Our Address</h3>
-                    <p class="footer-address">1910 132nd Ave NE #7, Bellevue, WA 98005</p>
-                </div>
-                <div>
-                    <h3>Social Media</h3>
-                    <div class="footer-section">
-                        <p><a href="https://www.instagram.com/igniterobotics_/" class="footer-link">Instagram</a></p>
-                        <p><a href="https://www.linkedin.com/company/ignite-robotics" class="footer-link">LinkedIn</a></p>
-                        <p><a href="https://www.youtube.com/@igniterobotics" class="footer-link">Youtube</a></p>
+                <div class="footer-info">
+                    <div>
+                        <h3>Our Address</h3>
+                        <p>1910 132nd Ave NE #7, <br/> Bellevue, WA 98005</p>
+                    </div>
+                    <div>
+                        <h3>Social Media</h3>
+                        <div class="footer-section">
+                            <p><a href="https://www.instagram.com/igniterobotics_/" class="footer-link">Instagram</a></p>
+                            <p><a href="https://www.linkedin.com/company/ignite-robotics" class="footer-link">LinkedIn</a></p>
+                            <p><a href="https://www.youtube.com/@igniterobotics" class="footer-link">Youtube</a></p>
+                        </div>
+                    </div>
+                    <div>
+                        <div class="footer-section">
+                            <p><a href="#">Home</a></p>
+                            <p><a href="#">Exothermic</a></p>
+                            <p><a href="#">Quantum</a></p>
+                            <p><a href="#">Blaze Qubits</a></p>
+                            <p><a href="#">Summer Courses</a></p>
+                            <p><a href="#">Support Us</a></p>
+                            <p><a href="#">About Us</a></p>
+                            <p><a href="#">Contact</a></p>
+                            <p><a href="#">Login</a></p>
+                        </div>
                     </div>
                 </div>
-                <div>
-                    <div class="footer-section">
-                        <p><a href="#">Home</a></p>
-                        <p><a href="#">Exothermic</a></p>
-                        <p><a href="#">Quantum</a></p>
-                        <p><a href="#">Blaze Qubits</a></p>
-                        <p><a href="#">Summer Courses</a></p>
-                        <p><a href="#">Support Us</a></p>
-                        <p><a href="#">About Us</a></p>
-                        <p><a href="#">Contact</a></p>
-                        <p><a href="#">Login</a></p>
-                </div>
             </div>
+            <p>A 501(c)(3) nonprofit.</p>
         </footer>
     </body>
 </html>
