--- a/public/contact.html
+++ b/public/contact.html
@@ -11,17 +11,40 @@
     </head>
     <body>
         <nav>
-            <a href="./index.html">
-                <img src="./img/ignite_logo.png" alt="Ignite Robotics Logo" class="nav-logo">
-            </a>
-            <ul class="nav-links">
-                <li><a href="#">Programs</a></li>
-                <li><a href="./summer.html">Summer Classes</a></li>
-                <li><a href="#">Support</a></li>
-                <li><a href="./about.html">About Us</a></li>
-                <li><a href="./contact.html">Contact</a></li>
-                <li><a href="#">Login</a></li>
-            </ul>
+            <div>
+                <a href="./index.html">
+                    <img src="./img/ignite_logo.png" alt="Ignite Robotics Logo" class="nav-logo">
+                </a>
+                <ul class="nav-links">
+                    <li><a href="#">Exothermic</a></li>
+                    <li><a href="#">Quantum</a></li>
+                    <li><a href="#">Blaze</a></li>
+                    <li><a href="./summer.html">Summer Classes</a></li>
+                    <li><a href="#">Support</a></li>
+                    <li><a href="./about.html">About Us</a></li>
+                    <li><a href="./contact.html">Contact</a></li>
+                    <li><a href="#" class="login-button">Login</a></li>
+                </ul>
+                <!-- Hamburger Menu -->
+                <div class="hamburger-menu">
+                    <a>
+                        <img src="./img/hamburger-menu.svg" alt="hamburger menu">
+                    </a>
+                </div>
+            </div>
+            <!-- Popup menu -->
+            <div class="popup-menu" id="popup-menu">
+                <ul class="popup-nav-links">
+                    <li><a href="#">Exothermic</a></li>
+                    <li><a href="#">Quantum</a></li>
+                    <li><a href="#">Blaze</a></li>
+                    <li><a href="./summer.html">Summer Classes</a></li>
+                    <li><a href="#">Support</a></li>
+                    <li><a href="./about.html">About Us</a></li>
+                    <li><a href="./contact.html">Contact</a></li>
+                    <li><a href="#" class="login-button">Login</a></li>
+                </ul>
+            </div>
         </nav>
         <main>
             <div class="centered-section-2">
@@ -57,14 +80,14 @@
                         <div class="contact-link-div">
                             <div class="contact-links">
                                 <h3>Our Number</h3>
-                                <a href="tel:+14256869508" class="phonenumber"><p>+1 (425) 686 9508</p></a>
+                                <a href="tel:+14256869508" class="phonenumber"><p>+1 (425)686-9508</p></a>
                             </div>
                             <div class="contact-links">
                                 <h3>Social Media</h3>
                                 <div class="social-links-div">
-                                    <img src="./img/instagram.svg" alt="Instagram logo" width="30" height="30">
-                                    <img src="./img/linkedin.svg" alt="LinkedIn logo" width="30" height="30">
-                                    <img src="./img/youtube.svg" alt="Youtube logo" width="30" height="30">
+                                    <img src="./img/instagram.svg" alt="Instagram logo" class="social-icon">
+                                    <img src="./img/linkedin.svg" alt="LinkedIn logo" class="social-icon">
+                                    <img src="./img/youtube.svg" alt="Youtube logo" class="social-icon">
                                 </div>
                             </div>
                         </div>
