--- a/public/summer.html
+++ b/public/summer.html
@@ -14,18 +14,41 @@
   </head>
   <body>
     <nav>
-      <a href="./index.html">
-          <img src="./img/ignite_logo.png" alt="Ignite Robotics Logo" class="nav-logo">
-      </a>
-      <ul class="nav-links">
-          <li><a href="#">Programs</a></li>
-          <li><a href="./summer.html">Summer Classes</a></li>
-          <li><a href="#">Support</a></li>
-          <li><a href="./about.html">About Us</a></li>
-          <li><a href="./contact.html">Contact</a></li>
-          <li><a href="#">Login</a></li>
-      </ul>
-    </nav>
+      <div>
+          <a href="./index.html">
+              <img src="./img/ignite_logo.png" alt="Ignite Robotics Logo" class="nav-logo">
+          </a>
+          <ul class="nav-links">
+              <li><a href="#">Exothermic</a></li>
+              <li><a href="#">Quantum</a></li>
+              <li><a href="#">Blaze</a></li>
+              <li><a href="./summer.html">Summer Classes</a></li>
+              <li><a href="#">Support</a></li>
+              <li><a href="./about.html">About Us</a></li>
+              <li><a href="./contact.html">Contact</a></li>
+              <li><a href="#" class="login-button">Login</a></li>
+          </ul>
+          <!-- Hamburger Menu -->
+          <div class="hamburger-menu">
+              <a>
+                  <img src="./img/hamburger-menu.svg" alt="hamburger menu">
+              </a>
+          </div>
+      </div>
+      <!-- Popup menu -->
+      <div class="popup-menu" id="popup-menu">
+          <ul class="popup-nav-links">
+              <li><a href="#">Exothermic</a></li>
+              <li><a href="#">Quantum</a></li>
+              <li><a href="#">Blaze</a></li>
+              <li><a href="./summer.html">Summer Classes</a></li>
+              <li><a href="#">Support</a></li>
+              <li><a href="./about.html">About Us</a></li>
+              <li><a href="./contact.html">Contact</a></li>
+              <li><a href="#" class="login-button">Login</a></li>
+          </ul>
+      </div>
+  </nav>
     <main>
       <div class="banner">
         <img src="./img/summer_header.png" alt="Summer Courses photo" class="banner">
@@ -40,7 +63,7 @@
       </div>
 
       <div class="centered-section">
-        <div id="introduction">
+        <div class="primary-section summer-intro">
           <h2>Introducing Ignite Summer 2024 Classes</h2>
           <p>
             Whether you're a new student eager to learn the basics or a
