--- a/public/contact.html
+++ b/public/contact.html
@@ -96,36 +96,37 @@
             </div>
         </main>
         <footer>
-            <div class="footer-description">
+            <div class="footer-content">
                 <img src="./img/ignite_logo.png" alt="Ignite Robotics Logo" class="footer-logo">
-                <p>A 501(c)(3) nonprofit.</p>
-            </div>
-            <div class="footer-info">
-                <div>
-                    <h3>Our Address</h3>
-                    <p class="footer-address">1910 132nd Ave NE #7, Bellevue, WA 98005</p>
-                </div>
-                <div>
-                    <h3>Social Media</h3>
-                    <div class="footer-section">
-                        <p><a href="https://www.instagram.com/igniterobotics_/" class="footer-link">Instagram</a></p>
-                        <p><a href="https://www.linkedin.com/company/ignite-robotics" class="footer-link">LinkedIn</a></p>
-                        <p><a href="https://www.youtube.com/@igniterobotics" class="footer-link">Youtube</a></p>
+                <div class="footer-info">
+                    <div>
+                        <h3>Our Address</h3>
+                        <p>1910 132nd Ave NE #7, <br/> Bellevue, WA 98005</p>
+                    </div>
+                    <div>
+                        <h3>Social Media</h3>
+                        <div class="footer-section">
+                            <p><a href="https://www.instagram.com/igniterobotics_/" class="footer-link">Instagram</a></p>
+                            <p><a href="https://www.linkedin.com/company/ignite-robotics" class="footer-link">LinkedIn</a></p>
+                            <p><a href="https://www.youtube.com/@igniterobotics" class="footer-link">Youtube</a></p>
+                        </div>
+                    </div>
+                    <div>
+                        <div class="footer-section">
+                            <p><a href="#">Home</a></p>
+                            <p><a href="#">Exothermic</a></p>
+                            <p><a href="#">Quantum</a></p>
+                            <p><a href="#">Blaze Qubits</a></p>
+                            <p><a href="#">Summer Courses</a></p>
+                            <p><a href="#">Support Us</a></p>
+                            <p><a href="#">About Us</a></p>
+                            <p><a href="#">Contact</a></p>
+                            <p><a href="#">Login</a></p>
+                        </div>
                     </div>
                 </div>
-                <div>
-                    <div class="footer-section">
-                        <p><a href="#">Home</a></p>
-                        <p><a href="#">Exothermic</a></p>
-                        <p><a href="#">Quantum</a></p>
-                        <p><a href="#">Blaze Qubits</a></p>
-                        <p><a href="#">Summer Courses</a></p>
-                        <p><a href="#">Support Us</a></p>
-                        <p><a href="#">About Us</a></p>
-                        <p><a href="#">Contact</a></p>
-                        <p><a href="#">Login</a></p>
-                </div>
             </div>
+            <p>A 501(c)(3) nonprofit.</p>
         </footer>
     </body>
 </html>
