--- a/public/about.html
+++ b/public/about.html
@@ -56,7 +56,7 @@
                 </div>
             </div>
             <div class="centered-section">
-                <div class="about-description-div">
+                <div class="photo-section">
                     <div class="about-description">
                         <h2>What We Do</h2>
                         <p>
@@ -71,24 +71,24 @@
                 <div class="outer-achievements-div">
                     <div class="inner-achievements-div">
                         <div class="stat">
-                            <p>18+</p>
+                            <h1>18+</h1>
                             <p>Years</p>
                         </div>
                         <div class="stat">
-                            <p>200+</p>
+                            <h1>200+</h1>
                             <p>Teams</p>
                         </div>
                         <div class="stat">
-                            <p>400+</p>
+                            <h1>400+</h1>
                             <p>Awards</p>
                         </div>
                         <div class="stat">
-                            <p>3000+</p>
+                            <h1>3000+</h1>
                             <p>Students Impacted</p>
                         </div>
                     </div>
                 </div>
-                <div class="primary-section">
+                <div class="outer-div">
                     <h2>Our Core Values</h2>
                     <div class="inner-values-div">
                         <div class="value-div">
@@ -109,43 +109,43 @@
                         </div>
                     </div>
                 </div>
-                <div class="outer-goals-div">
+                <div class="outer-div">
                     <h2>Our Goals</h2>
-                    <div class="inner-goals-div">
+                    <div class="inner-div">
                         <div class="goal">
-                            <img src="./img/inclusivity.jpeg" alt="inclusivity photo">
-                            <div class="goal-description-right">
+                            <div class="goal-description">
                                 <h3>Inclusivity</h3>
                                 <p>We aim to lower Ignite's operating costs. By doing so, we hope to make lgnite and Robotics more accessible.</p>
                             </div>
+                            <img src="./img/inclusivity.jpeg" alt="inclusivity photo">
                         </div>
                         <div class="goal">
-                            <div class="goal-description-left">
+                            <div class="goal-description">
                                 <h3>Scholarship Offers</h3>
                                 <p>We already provide a few scholarships for members. However, Ignite wants to provide as many future innovators as possible the opportunity to compete and participate in robotics.</p>
                             </div>
                             <img src="./img/scholarship.jpeg" alt="scholarship photo">
                         </div>
                         <div class="goal">
-                            <img src="./img/expansion_photo.jpeg" alt="expansion photo">
-                            <div class="goal-description-right">
+                            <div class="goal-description">
                                 <h3>Further Expansion</h3>
                                 <p>Recently, we've relocated into a 6,000+ sqft space in Bellevue, WA to support our growing student population. We hope to expand our reach into more communities in the greater Seattle area.</p>
                             </div>
+                            <img src="./img/expansion_photo.jpeg" alt="expansion photo">
                         </div>
                         <div class="goal">
-                            <div class="goal-description-left">
+                            <div class="goal-description">
                                 <h3>Outreach</h3>
                                 <p>We aspire to create opportunities for underrepresented groups to explore STEM fields. Events such as GirlPowered and outreach campaigns, supported by you, bring STEM exploration to the source!</p>
                             </div>
                             <img src="./img/outreach1.JPG" alt="GirlPowered photo">
                         </div>
                         <div class="goal">
-                            <img src="./img/emergingyouth.JPG" alt="Youth robotics photo">
-                            <div class="goal-description-right">
+                            <div class="goal-description">
                                 <h3>An Emerging Youth Robotics Culture</h3>
                                 <p>With your support, Ignite can continue to provide the latest, cutting-edge tools, materials, and mentorship for our students to push the boundaries of youth engineering at a scale like no other.</p>
                             </div>
+                            <img src="./img/emergingyouth.JPG" alt="Youth robotics photo">
                         </div>
                     </div>
                 </div>
