Updated quantum and support us pages

--- a/public/support-us.html
+++ b/public/support-us.html
@@ -24,54 +24,84 @@
             </ul>
         </nav>
         <main>
-            <div class="title-content">
-                <h1 class="support-us-title">
+            <div id="support-us-title">
+                <h1>
                     Ignite Robotics with your support
                 </h1>
-                <p class="support-us-title-msg">
+                <p>
                     Support our team in advancing robotics. Your contribution helps the young minds in our programs develop essential engineering skills and gain hands-on experience in robotics.
                 </p>
             </div>
 
-            <img class="northwest-photo" src="./img/northwest_photo.png">
+            <img id="northwest-photo" src="./img/northwest_photo.png">
 
-            <div class="how-to-get-involved">
-                <h1 class="involved-text">How to get involved</h1>
-                <div class="support-grid">
+            <div id="how-to-get-involved">
+                <h2>How to get involved</h2>
+                <div id="support-grid">
                     <div class="support-method">
                         <img class="suport-method-icon" src="./img/money.png">
-                        <h2>Donations</h2>
+                        <h3>Donations</h3>
                         <p class="support-method-text">Support Ignite Robotics by donating using the link below, or your company’s donation portal<br>(Benevity ID: 871306813).</p>
                         <p class="support-method-text">Donations go towards sustaining and improving our operations to further support the student community’s exploration of STEM.</p>
-                        <button class="donate-button">Donate</button>
+                        <button>Donate</button>
                     </div>
                     <div class="support-method">
                         <img class="suport-method-icon" src="./img/user_alt.png">
-                        <h2>Volunteer</h2>
+                        <h3>Volunteer</h3>
                         <p class="support-method-text">Volunteer your time and skills to help make our events a success. As a volunteer, your support is invaluable—whether it's assisting with event setup, managing activities, or providing guidance during competitions.</p>
-                        <button class="volunteer-button">Volunteer</button>
+                        <button>Volunteer</button>
                     </div>
                     <div class="support-method">
                         <img class="suport-method-icon" src="./img/gift.png">
-                        <h2>Sponsorship Connections</h2>
+                        <h3>Sponsorship Connections</h3>
                         <p class="support-method-text">If you or someone you know is interested in sponsoring Ignite Robotics, reach out to us and we’ll send over our sponsorship resources!</p>
-                        <button class="sponsorship-button">Sponsorship Packet</button>
+                        <button>Sponsorship Packet</button>
                     </div>
                     <div class="support-method">
                         <img class="suport-method-icon" src="./img/chart_alt.png">
-                        <h2>Corporate Matching</h2>
+                        <h3>Corporate Matching</h3>
                         <p class="support-method-text">Many large corporations such as Microsoft, Google, GE, and JP Morgan match employee donations at a 1:1 ratio or more for full and part-time employees.</p>
                         <p class="support-method-text">Filling out your employer’s match request form can substantially increase the impact of your contribution! Please let us know if you need assistance with this process!</p>
                     </div>
                     <div class="support-method">
                         <img class="suport-method-icon" src="./img/group.png">
-                        <h2>Volunteer Grants</h2>
+                        <h3>Volunteer Grants</h3>
                         <p class="support-method-text">Companies such as Microsoft, Dell, and Verizon also have volunteer grant programs. Supervising the Robot House after-hours, helping out at events, and other Ignite volunteering opportunities translate into direct contributions from your employer—matched on an hourly rate that they give depending on how many hours you volunteered.</p>
                     </div>
                 </div>
             </div>
 
-            <div class="page-bottom"></div>
+            <footer>
+                <img src="./img/ignite_logo.png" alt="Ignite Robotics Logo" class="footer-logo">
+                <div class="footer-info">
+                    <div>
+                        <h3>Our Address</h3>
+                        <p class="footer-address">1910 132nd Ave NE #7, Bellevue, WA 98005</p>
+                    </div>
+                    <div>
+                        <h3>Social Media</h3>
+                        <div class="footer-section">
+                            <p><a href="https://www.instagram.com/igniterobotics_/" class="footer-link">Instagram</a></p>
+                            <p><a href="https://www.linkedin.com/company/ignite-robotics" class="footer-link">LinkedIn</a></p>
+                            <p><a href="https://www.youtube.com/@igniterobotics" class="footer-link">Youtube</a></p>
+                        </div>
+                    </div>
+                    <div>
+                        <h3>Pages</h3>
+                        <div class="footer-section">
+                            <p><a href="#">Home</a></p>
+                            <p><a href="#">Exothermic</a></p>
+                            <p><a href="#">Quantum</a></p>
+                            <p><a href="#">Blaze Qubits</a></p>
+                            <p><a href="#">Summer Courses</a></p>
+                            <p><a href="#">Support Us</a></p>
+                            <p><a href="#">About Us</a></p>
+                            <p><a href="#">Contact</a></p>
+                            <p><a href="#">Login</a></p>
+                        </div>
+                    </div>
+                </div>
+            </footer>
         </main>
     </body>
 </html>
