--- a/public/quantum.html
+++ b/public/quantum.html
@@ -24,7 +24,7 @@
             </ul>
         </nav>
         <main>
-            <img src="./img/blank.png" class="title-background-image">
+            <img src="./img/quantum_banner.png" class="title-background-image">
 
             <div class="title-container">
               <h1>Quantum</h1>
@@ -34,7 +34,7 @@
 
             <div class="division-overview">
               <div class="overview-content">
-                <h1>Overview</h1>
+                <h2>Overview</h2>
                 <p>Quantum Robotics Division welcomes high school students under 19 by May 1st, particularly those <b>new to the VEX Robotics Competition or transitioning from middle school programs.</b> This division provides a nurturing environment that encourages beginners to develop foundational robotics skills.</p>
                 <p>This division focuses on providing a comprehensive introduction to robotics, with an emphasis on mentor-led training and development. Students are introduced to essential robotics technologies and team collaboration practices.</p>
               </div>
@@ -42,7 +42,7 @@
             </div>
 
             <div class="educational-outcomes">
-              <h1>Educational Outcomes</h1>
+              <h2>Educational Outcomes</h2>
               <div class="educational-outcomes-grid">
                 <div class="educational-outcome">
                   <div class="education-icon-container">
@@ -72,7 +72,7 @@
 
             <div class="resources">
               <div class="schedule">
-                <h1>Schedule</h1>
+                <h2>Schedule</h2>
                 <div class="season-schedule">
                   <div>
                     <h3>Regular Season</h3>
@@ -90,10 +90,41 @@
                 <p class="schedule-bottom-text">Teams meet at least twice a week, focusing on guided design and build activities, programming, and maintaining an engineering notebook.</p>
               </div>
               <div class="support">
-                <h1>Support and Resources</h1>
+                <h2>Support and Resources</h2>
                 <p>Each team is paired with dedicated adult mentors, and students have access to structured seminars and clinics to bolster their learning.</p>
               </div>
             </div>
         </main>
+        <footer>
+          <img src="./img/ignite_logo.png" alt="Ignite Robotics Logo" class="footer-logo">
+          <div class="footer-info">
+              <div>
+                  <h3>Our Address</h3>
+                  <p class="footer-address">1910 132nd Ave NE #7, Bellevue, WA 98005</p>
+              </div>
+              <div>
+                  <h3>Social Media</h3>
+                  <div class="footer-section">
+                      <p><a href="https://www.instagram.com/igniterobotics_/" class="footer-link">Instagram</a></p>
+                      <p><a href="https://www.linkedin.com/company/ignite-robotics" class="footer-link">LinkedIn</a></p>
+                      <p><a href="https://www.youtube.com/@igniterobotics" class="footer-link">Youtube</a></p>
+                  </div>
+              </div>
+              <div>
+                  <h3>Pages</h3>
+                  <div class="footer-section">
+                      <p><a href="#">Home</a></p>
+                      <p><a href="#">Exothermic</a></p>
+                      <p><a href="#">Quantum</a></p>
+                      <p><a href="#">Blaze Qubits</a></p>
+                      <p><a href="#">Summer Courses</a></p>
+                      <p><a href="#">Support Us</a></p>
+                      <p><a href="#">About Us</a></p>
+                      <p><a href="#">Contact</a></p>
+                      <p><a href="#">Login</a></p>
+                  </div>
+              </div>
+          </div>
+      </footer>
     </body>
 </html>
