--- a/public/index.html
+++ b/public/index.html
@@ -23,8 +23,47 @@
             </ul>
         </nav>
         <main>
+            <div class=""landing-container">
             <img src="./img/landingpage_photo.png" alt="Exothermic competing" class="landing-photo">
         </main>
+        
+        <!-- Our Programs Section -->
+        <div class="programs-container">
+            <h1 class="programs-title">Our Programs</h1>
+            <div class="program-container">
+                <div class="program-card">
+                    <img src="./img/exo_logo.png" alt="Exothermic Logo">
+                    <h2>Exothermic</h2>
+                    <p>High School (9th - 12th)</p>
+                    <a href="#"> <!-- Link goes here -->
+                        <button class="learn-more-btn">Learn More</button>
+                    </a>
+                </div>
+
+                <div class="program-card">
+                    <img src="./img/quantum_logo.png" alt="Quantum Logo">
+                    <br>
+                    <h2>Quantum</h2>
+                    <p>High School (9th - 12th)</p>
+                    <a href="#"> <!-- Link goes here -->
+                        <button class="learn-more-btn">Learn More</button>
+                    </a>
+                </div>
+
+                <div class="program-card">
+                    <img src="./img/blaze_logo.png" alt="Blaze Qubits Logo">
+                    <h2>Blaze Qubits</h2>
+                    <p>Middle School (6th - 8th)</p>
+                    <a href="#"> <!-- Link goes here -->
+                        <button class="learn-more-btn">Learn More</button>
+                    </a>
+                </div>
+            </div>
+        </div>
+    </main>
+    </div>
+</div>
+</main>
         <head>
             <meta charset="UTF-8">
             <meta name="viewport" content="width=device-width, initial-scale=1.0">
